Colaboratory を使用して作成しました

--- a/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
+++ b/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
@@ -484,6 +484,205 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qKW776Ey94Tt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "f6f7a984-ea79-404b-b9ea-11af711b93c6"
+      },
+      "source": [
+        "k=0\n",
+        "p=0\n",
+        "for i in range(len(train_list)):\n",
+        "    print(train_dataset[k].__getitem__(index)[0].size())\n",
+        "    k+=1\n",
+        "for i in range(len(val_list)):\n",
+        "    print(val_dataset[k].__getitem__(index)[0].size())\n",
+        "    k+=1"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-65-01d9c412c386>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mk\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-28-5ee992df90c6>\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;31m# 画像の前処理を実施\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         img_transformed = self.transform(\n\u001b[0;32m---> 37\u001b[0;31m             img, self.phase)  # torch.Size([3, 224, 224])\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0;31m# 画像のラベルをファイル名から抜き出す\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-96babc88d303>\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, img, phase)\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0m前処理のモードを指定\u001b[0m\u001b[0;31m。\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \"\"\"\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_transform\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mphase\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torchvision/transforms/transforms.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torchvision/transforms/transforms.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, tensor)\u001b[0m\n\u001b[1;32m    173\u001b[0m             \u001b[0mTensor\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mNormalized\u001b[0m \u001b[0mTensor\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m         \"\"\"\n\u001b[0;32m--> 175\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torchvision/transforms/functional.py\u001b[0m in \u001b[0;36mnormalize\u001b[0;34m(tensor, mean, std, inplace)\u001b[0m\n\u001b[1;32m    215\u001b[0m     \u001b[0mmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m     \u001b[0mstd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m     \u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiv_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (4) must match the size of tensor b (3) at non-singleton dimension 0"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "FE5oHFOv2piu",
         "colab_type": "code",
         "outputId": "1a56053d-2dac-4962-b8f0-81d631f8b8d4",
