Colaboratory を使用して作成しました

--- a/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
+++ b/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
@@ -125,10 +125,10 @@
       "metadata": {
         "id": "kcB9Fyl22PNP",
         "colab_type": "code",
-        "outputId": "e35353ac-9d36-44ee-f244-5c00124309e0",
+        "outputId": "113fdd32-84d3-432a-d3a2-f800d1bb4c62",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 256
+          "height": 178
         }
       },
       "source": [
@@ -151,7 +151,7 @@
         "!date -R\n",
         "!ls"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,13 +161,8 @@
             "Enter your authorization code:\n",
             "··········\n",
             "Mounted at /content/drive\n",
-            "Mon, 02 Dec 2019 04:27:15 +0000\n",
-            "Mon, 02 Dec 2019 04:27:21 +0000\n",
-            "data  drive  sample_data  utils\n",
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Mon, 02 Dec 2019 04:27:24 +0000\n",
-            "replace data/__init__.py? [y]es, [n]o, [A]ll, [N]one, [r]ename: N\n",
-            "Mon, 02 Dec 2019 04:27:47 +0000\n",
+            "Tue, 03 Dec 2019 09:50:06 +0000\n",
+            "Tue, 03 Dec 2019 09:50:13 +0000\n",
             "data  drive  sample_data  utils\n"
           ],
           "name": "stdout"
@@ -237,7 +232,7 @@
       "metadata": {
         "id": "2ZFGjMD72evm",
         "colab_type": "code",
-        "outputId": "0aca15a8-7999-4a5b-b895-1f909ad96deb",
+        "outputId": "8da35872-7bc7-499c-8ecc-be0800f3ec90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 521
@@ -248,7 +243,7 @@
         "# 実行するたびに処理結果の画像が変わる\n",
         "\n",
         "# 1. 画像読み込み\n",
-        "image_file_path = './data/goldenretriever-3724972_640.jpg'\n",
+        "image_file_path = '/content/data/goldenretriever-3724972_640.jpg'\n",
         "img = Image.open(image_file_path)   # [高さ][幅][色RGB]\n",
         "\n",
         "# 2. 元の画像の表示\n",
@@ -269,7 +264,7 @@
         "plt.imshow(img_transformed)\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -302,10 +297,10 @@
       "metadata": {
         "id": "apYPWK8S2ifW",
         "colab_type": "code",
-        "outputId": "4934a7f3-dd18-46db-f76b-e4dc6188a0fb",
+        "outputId": "8e0a817c-5fe9-4dd5-e9c3-b6621197ad9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 169
+          "height": 175
         }
       },
       "source": [
@@ -361,7 +356,7 @@
         "print(\"training data set_total：\"+ str(len(train_list)))\n",
         "print(\"validating data set_total：\"+str(len(val_list)))"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,12 +364,12 @@
             "/content/data/hymenoptera_data/train/**/*.jpg\n",
             "/content/data/hymenoptera_data/val/**/*.jpg\n",
             "['apple', 'strawberry']\n",
-            "apple_train:150\n",
+            "apple_train:148\n",
             "strawberry_train:124\n",
             "apple_val:44\n",
-            "strawberry_val:39\n",
-            "training data set_total：242\n",
-            "validating data set_total：68\n"
+            "strawberry_val:37\n",
+            "training data set_total：265\n",
+            "validating data set_total：79\n"
           ],
           "name": "stdout"
         }
@@ -395,10 +390,10 @@
       "metadata": {
         "id": "0Xc8B38L2m3d",
         "colab_type": "code",
-        "outputId": "cbb5c177-d6e8-4c5a-c609-805db1424163",
+        "outputId": "74472dbb-f4a3-4630-f25d-80772f48dcf8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
+          "height": 52
         }
       },
       "source": [
@@ -469,7 +464,7 @@
         "print(train_dataset.__getitem__(index)[0].size())\n",
         "print(train_dataset.__getitem__(index)[1])"
       ],
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,27 +481,47 @@
       "metadata": {
         "id": "qKW776Ey94Tt",
         "colab_type": "code",
+        "outputId": "de574516-a366-4727-d218-763327dc7e91",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "f6f7a984-ea79-404b-b9ea-11af711b93c6"
+        }
       },
       "source": [
+        "#テンソルサイズの確認\n",
+        "print(\"train_list\")\n",
         "k=0\n",
-        "p=0\n",
         "for i in range(len(train_list)):\n",
         "    print(train_dataset[k].__getitem__(index)[0].size())\n",
         "    k+=1\n",
+        "print(\"val_list\")\n",
+        "k=0\n",
         "for i in range(len(val_list)):\n",
         "    print(val_dataset[k].__getitem__(index)[0].size())\n",
         "    k+=1"
       ],
-      "execution_count": 65,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "train_list\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
+            "torch.Size([224, 224])\n",
             "torch.Size([224, 224])\n",
             "torch.Size([224, 224])\n",
             "torch.Size([224, 224])\n",
@@ -669,9 +684,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-65-01d9c412c386>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mk\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-28-5ee992df90c6>\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;31m# 画像の前処理を実施\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         img_transformed = self.transform(\n\u001b[0;32m---> 37\u001b[0;31m             img, self.phase)  # torch.Size([3, 224, 224])\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0;31m# 画像のラベルをファイル名から抜き出す\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-8-96babc88d303>\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, img, phase)\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0m前処理のモードを指定\u001b[0m\u001b[0;31m。\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \"\"\"\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_transform\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mphase\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-11-f67870ab01a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mk\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"val_list\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-7-5ee992df90c6>\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;31m# 画像の前処理を実施\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         img_transformed = self.transform(\n\u001b[0;32m---> 37\u001b[0;31m             img, self.phase)  # torch.Size([3, 224, 224])\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0;31m# 画像のラベルをファイル名から抜き出す\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-96babc88d303>\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, img, phase)\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0m前処理のモードを指定\u001b[0m\u001b[0;31m。\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \"\"\"\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_transform\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mphase\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torchvision/transforms/transforms.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torchvision/transforms/transforms.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, tensor)\u001b[0m\n\u001b[1;32m    173\u001b[0m             \u001b[0mTensor\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mNormalized\u001b[0m \u001b[0mTensor\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m         \"\"\"\n\u001b[0;32m--> 175\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torchvision/transforms/functional.py\u001b[0m in \u001b[0;36mnormalize\u001b[0;34m(tensor, mean, std, inplace)\u001b[0m\n\u001b[1;32m    215\u001b[0m     \u001b[0mmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m     \u001b[0mstd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m     \u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiv_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -712,7 +727,7 @@
         "print(inputs.size())\n",
         "print(labels)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +764,7 @@
         "\n",
         "print('ネットワーク設定完了：学習済みの重みをロードし、訓練モードに設定しました')"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -882,7 +897,7 @@
         "print(\"-----------\")\n",
         "print(params_to_update)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1007,7 +1022,7 @@
         "num_epochs=8\n",
         "train_model(net, dataloaders_dict, criterion, optimizer, num_epochs=num_epochs)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
