Colaboratory を使用して作成しました

--- a/Pytorch_転移学習tutorial_StawberryApple1.5.ipynb
+++ b/Pytorch_転移学習tutorial_StawberryApple1.5.ipynb
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#PyTorch : Tutorial 初級 : 転移学習チュートリアル\n",
+        "#PyTorch : RESNET18を用いたdeep learning（転移学習も）\n",
         "\n",
         "http://torch.classcat.com/2018/04/29/pytorch-tutorial-transfer-learning/\n"
       ]
@@ -55,9 +55,6 @@
         "colab": {}
       },
       "source": [
-        "# License: BSD\n",
-        "# Author: Sasank Chilamkurthy\n",
-        "\n",
         "from __future__ import print_function, division\n",
         "\n",
         "import torch\n",
